sfx2: related tdf#56270: loss of embedded objects imported from DOCX

After the import some of these are kept in RUNNING state.  For Math
objects imported from MathType3 OLEs in particular, first a new
Math object is created and stored to the XStorage, only then is the
MathType3 stream imported.  This means the Math object is modified and
contains data that must be stored.

The problem is then that SfxObjectShell::ImportFrom() simply calls
setModified(false), clearing the flag without storing the object.

For Flat ODF export we lose all the objects that are cached in sw's
SwOLELRUCache; for the bugdoc something more inexplicable happens for
ODT export where we lose "Object 214" (which is the first one in the
cache) but no other ones.

(The main difference is that for ODF there is an optimization to copy the
embedded object's storage without loading the object, but for Flat ODF
every object must be loaded and exported.)

(regression from 83777cd6e0f3f1a4458af896fd13344c696ecb1e)

Change-Id: Id1474fba9f4da2d5247c7ff4dc6819ddb9829fe8